--- a/static/bootstrap/widgets/_featured-products.scss
+++ b/static/bootstrap/widgets/_featured-products.scss
@@ -1,6 +1,6 @@
 //Only for home page at the moment.
-.featured-products .slick{
-  div {
+.featured-products .slick {
+  > div {
     .product-text-wrapper {
       height: 98px;
     }
@@ -8,34 +8,30 @@
       margin: 19px 0 30px 0;
     }
   }
-  .slick-arrow{
+  .slick-arrow {
     background-color: #ccc;
     border-color: #eee;
   }
-  .slick-prev{
+  .slick-prev {
 
   }
 }
 
 /*mobile*/
 @media (max-width: 767px) {
-  .featured-products {
-    ul li {
+  .featured-products .slick {
+    > div {
+      margin-top: 20px;
+      &:first-child{
+        margin-top:0;
+      }
       &:nth-child(3) .polaris-divider, &:nth-child(9) .polaris-divider {
         display: none !important;
       }
-    }
-    .btn-default {
-      margin-bottom: 20px;
-      margin-top: 9px;
-    }
-  }
-}
-
-@media (min-width: 768px) {
-  .featured-products {
-    .pagination-container {
-      margin: 0 -15px;
+      .product-text-wrapper {
+        height: auto;
+        margin-bottom:30px;
+      }
     }
   }
 }
