--- a/static/bootstrap/widgets/_slick.scss
+++ b/static/bootstrap/widgets/_slick.scss
@@ -616,6 +616,10 @@ $slick-opacity-not-active: 0.25 !default;
         }
       }
     }
+    &.arrows-top-bottom.slick-slider{
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+    }
   }
 }
 
