3 main areas where touched: 1)randomize function inside the slick plugin function, 2) implementation of matchHeight (within document ready function) and finally the implementation of the dotdotdot (directly on the view) Let me know if you have any question.
Change-Id: I563f2caff9ee0bf41b55695146d4dd0253121c7a

--- a/static/bootstrap/widgets/_featured-products.scss
+++ b/static/bootstrap/widgets/_featured-products.scss
@@ -1,4 +1,6 @@
 //Only for home page at the moment.
+
+/*
 .featured-products {
   .slick {
     > div {
@@ -37,6 +39,7 @@
 }
 
 /*mobile*/
+/*
 @media (max-width: 767px) {
   .featured-products .slick {
     > div {
@@ -59,4 +62,21 @@
   .slick-arrows {
     margin-right: 40px;
   }
+}
+*/
+.featured-products {
+  .slick-prev:before, .slick-next:before {
+    font-size: 80px;
+    font-weight: bold;
+  }
+  .slick-next {
+    right: -50px;
+  }
+  .slick-prev {
+    left: -68px;
+  }
+  .slick-prev, .slick-next {
+    top: 290px;
+  }
+
 }
